add_library(towns towns.h towns.cpp townsstate.cpp tbiosid.cpp townscmos.cpp townsio.cpp townsio.h townsvmif.cpp townsthread.cpp townsthread.h townsrenderthread.cpp townsrenderthread.h)
target_link_libraries(towns cpu vmbase device inout ramrom townscdrom townssound townsgameport townstimer townsmem townskeyboard townsrtc townspic townsdmac townscrtc townssprite townsrender townsfdc townsscsi townsserial townsvndrv d77 townsdef townseventlog outside_world)
target_include_directories(towns PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(outside_world)
add_subdirectory(townsdef)
add_subdirectory(cdrom)
add_subdirectory(memory)
add_subdirectory(crtc)
add_subdirectory(sprite)
add_subdirectory(render)
add_subdirectory(keyboard)
add_subdirectory(fdc)
add_subdirectory(scsi)
add_subdirectory(pic)
add_subdirectory(rtc)
add_subdirectory(dmac)
add_subdirectory(sound)
add_subdirectory(timer)
add_subdirectory(serialport)
add_subdirectory(gameport)
add_subdirectory(eventlog)
add_subdirectory(vndrv)
