set(TARGET_NAME vgmplayer)
add_executable(${TARGET_NAME} main.cpp vgm.cpp vgm.h)
target_link_libraries(${TARGET_NAME} ym2612 fssimplewindow yssimplesound)

if(MSVC)
	target_link_libraries(${TARGET_NAME} yssimplesound_dsound)
elseif(APPLE)
	find_library(COCOA_LIB Cocoa)
	mark_as_advanced(COCOA_LIB)
	target_link_libraries(${TARGET_NAME} yssimplesound_macosx ${COCOA_LIB})
elseif(UNIX)
	target_link_libraries(${TARGET_NAME} yssimplesound_linux_alsa)
endif()
